--- a/styles/index.css
+++ b/styles/index.css
@@ -1,59 +1,84 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    background-color: aqua;
+}
+@keyframes next {
+
+    from {}
+    to {top: 200px;}
 }
 
-.slider{
+body {
+    background: rgb(44, 65, 171);
+    background: radial-gradient(circle, rgba(44, 65, 171, 1) 0%, rgba(193, 47, 77, 1) 100%);
+}
+
+header {
+    position: relative;
+    height: 100vh;
+}
+
+.slider {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    position: absolute;
+    width: 100%;
+    bottom: 10px;
+}
+
+.slider__container {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.slider__container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
     column-gap: 10px;
     margin: 0 100px;
 }
 
-.item{
-    background-color: red;
+.item {
+    background-color: rgba(29, 28, 28, 0.904);
     padding: 5px;
+    border-radius: 4px;
 }
-.item__container__img{
+
+.item__container__img {
     width: 50px;
     height: 100px;
 }
-.item__img{
+
+.item__img {
     height: 100%;
     width: 100%;
-
-
     object-fit: cover;
-
 }
-.item__name{
+
+.item__name {
+    color: #fff;
+    text-align: center;
     font-size: 6px;
+    margin: 8px 0;
 }
 
-.arrow__container{
+.arrow__container {
     width: 50px;
     height: 100px;
 }
 
-.arrow{
+.arrow {
     background: transparent;
     height: 100%;
     width: 100%;
-
-    top: 0;
-    left: 0;
     object-fit: cover;
 }
-.arrow--right{
+
+.arrow--right {
     transform: rotate(180deg);
 }
+
+.itemtest{
+    position: absolute;
+    animation: next 5s infinite;
+}
+
+
